# task-management-api

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  exceptions.py  main.py  models.py  schemas.py
app/routers/: tasks.py
tests/: conftest.py  test_tasks.py
