[project]
name = "task-management-api"
version = "1.0.0"
description = "Task Management API with filtering, tagging, and deadlines"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
